[tool.poetry]
name = "velogames"
version = "0.1.0"
description = "A web scraper to get velogames riders and costs, as well as their corresponding PCS profiles"
authors = ["fred-cook <duverfred@yahoo.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
pandas = "^2.0.3"
bs4 = "^0.0.1"
requests = "^2.31.0"
unidecode = "^1.3.6"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
